--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>#Linker | Guilherme Bustamante</title>
+    <title>Linker | Guilherme Bustamante</title>
+
+    <meta
+      name="description"
+      content="Linker é o seu hub personalizado para explorar meu mundo digital. Descubra todos os meus projetos, acompanhe minhas últimas atualizações e conecte-se comigo nas redes sociais. Explore e encontre os links certos em um único lugar."
+    />
+
+    <meta
+      name="keywords"
+      content="Portfólio, Projetos pessoais, Redes sociais, Linktree alternativo, Links úteis, Conexões online, Exibição de links, Website pessoal, Networking digital, Perfis de redes sociais, Portfólio online, Links de projetos, Exploração digital, Guias de links, Central de links"
+    />
+
+    <meta name="author" content="Guilherme Bustamante" />
+
+    <meta name="language" content="pt-BR" />
+
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:title" content="Linker | Guilherme Bustamante" />
+    <meta
+      property="og:description"
+      content="Linker é o seu hub personalizado para explorar meu mundo digital. Descubra todos os meus projetos, acompanhe minhas últimas atualizações e conecte-se comigo nas redes sociais. Explore e encontre os links certos em um único lugar."
+    />
+    <meta property="og:image" content="/src/assets/logo.png" />
+    <meta property="og:url" content="https://linkerhub.vercel.app/" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Linker | Guilherme Bustamante" />
+    <meta
+      name="twitter:description"
+      content="Linker é o seu hub personalizado para explorar meu mundo digital. Descubra todos os meus projetos, acompanhe minhas últimas atualizações e conecte-se comigo nas redes sociais. Explore e encontre os links certos em um único lugar."
+    />
+    <meta name="twitter:image" content="/src/assets/logo.png" />
   </head>
   <body>
     <div id="root"></div>
